Correct z-index for header

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -12,7 +12,7 @@ a:hover {color: #35b9ab}
 .navbar-small .social-icons img {height: 25px}
 .nvabar-toggler {border: none}
 /* end of navbar */
-
+header {z-index: 1}
 #master-section {
   background-color: #0d5777;
   background-image: linear-gradient(30deg, #0d5777 0%, #47929d 90%, #47929d 100%);
